# WaveFunction

./: Cargo.toml  README.md
examples/: calculate_rules.rs  cut_tiles.rs  determine_rules.rs  gen_rules.rs  generate.rs  generate_map.rs  generate_map_in_chunks.rs  print_map.rs  render_map.rs
legacy/: rules.rs  tileset.rs  wave_function.rs  wave_function_backtracking.rs  wave_function_fastest.rs
output/: rules.yaml
output/tiles/: tiles.txt
scripts/: calculate_rules.sh  cut_tiles.sh  determine_rules.sh  generate_map.sh  generate_map_in_chunks.sh  print_src.sh  render_map.sh
src/: cell.rs  lib.rs  map.rs  rule_set.rs  rules.rs  tile.rs  tile_set.rs  tileset.rs  tileset_builder.rs  wave_function.rs
src/algorithm/: backtracking.rs  basic.rs  common.rs  fast.rs  mod.rs  optimised.rs  progress.rs
