[package]
name = "wave-function"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
fixedbitset = "0.5.7"
indicatif = "0.17.11"
ndarray = "0.16.1"
photo = "2.5.7"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"

[dev-dependencies]
clap = { version = "4.5.36", features = ["derive"] }
